public/css/nav.css
nav {
    border-bottom: 0.5px solid #ffffff50;
}

.nav-link {
    color: white !important;
}

.nav-link:not(.active):not(.no-underline):hover {
    text-decoration: underline;
}

.nav-link.active {
    font-weight: bold !important;
}

.nav-item {
    margin: 0px 16px;
    font-size: 18px;
}

.dropdown-item {
    font-size: 16px;
}

#big-contrainer {
    background-color: black !important;
    padding: 20px 1200px !important;
}

#container {
    align-items: center;
}

#navbar-component {
    display: flex;
    align-items: center;
}

#login {
    background-color: transparent;
    color: white;
    border: solid 2px white;
    border-radius: 10px;
    padding: 4px 16px;
    transition-duration: 300ms;
}

#login:hover {
    background-color: #fff;
    color: black;
}

@media screen and (max-width: 992px) {
    .nav-item {
        margin: 0;
    }

    #navbar-component {
        align-items: flex-start !important;
    }

    #home {
        margin-top: 20px;
    }
}

